--- a/analysis/plot_VoI_conv.ipynb
+++ b/analysis/plot_VoI_conv.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "expt_name = 'base'"
+    "expt_name = 'CVaR'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
    "source": [
     "fig,ax = plt.subplots()\n",
     "\n",
-    "plt.ylim(0,5.5e-3)\n",
+    "plt.ylim(0,3e-2)\n",
     "\n",
     "for techs_str in tech_combos_strs:\n",
     "    design_results_files = [os.path.join(result_dir_path_pattern.format(z=z),'design_options',f'{techs_str}_design.yaml') for z in range(N)]\n",
@@ -241,7 +241,7 @@
     "plt.xlabel('Posterior expected cost (€m/yr)')\n",
     "\n",
     "plt.hlines(0,0,1,color='black',linestyles=['--'],label='Pre-post.')\n",
-    "plt.legend()\n",
+    "plt.legend(loc='upper left')\n",
     "plt.tight_layout()\n",
     "plt.savefig(os.path.join('plots',f'{expt_name}_post_cost_dists.pdf'))\n",
     "plt.show()"
@@ -399,7 +399,7 @@
     "    )\n",
     "\n",
     "plt.xlim(0.42,0.46)\n",
-    "plt.ylim(0.5,8.5)\n",
+    "plt.ylim(0.5,9)\n",
     "\n",
     "plt.xlabel('Wind Capacity (GW)')\n",
     "plt.ylabel('Storage Capacity (GWh)')\n",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
