Update restricted designs scatter plot

--- a/analysis/analyse_case.ipynb
+++ b/analysis/analyse_case.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expt_name = 'CVaR'"
+    "expt_name = 'base'"
    ]
   },
   {
@@ -269,6 +269,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(prior_opt_results['design'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# restricted designs only\n",
     "fig, ax = plt.subplots()\n",
     "\n",
@@ -284,46 +293,47 @@
     "        total_storage_cap += res['design']['storage_capacities'][tech]['value']\n",
     "    restricted_storage_caps = np.append(restricted_storage_caps,total_storage_cap)\n",
     "\n",
-    "mean_rest_wind_cap = np.mean(restricted_wind_caps)\n",
-    "mean_rest_storage_cap = np.mean(restricted_storage_caps)\n",
+    "initial_design_wind = prior_opt_results['design']['wind_capacity']['value']\n",
+    "initial_design_storage = sum([prior_opt_results['design']['storage_capacities'][tech]['value'] for tech in prior_techs])\n",
+    "\n",
+    "ax.scatter(\n",
+    "    x=initial_design_wind/1e6,\n",
+    "    y=initial_design_storage/1e6,\n",
+    "    c='black',\n",
+    "    label='Initial design',\n",
+    "    lw=0,\n",
+    "    s=30,\n",
+    "    marker='s',\n",
+    "    zorder=20\n",
+    ")\n",
     "\n",
     "ax.scatter(\n",
     "    x=restricted_wind_caps/1e6,\n",
     "    y=restricted_storage_caps/1e6,\n",
     "    c=[colors[tech_combos_strs.index(restricted_techs_str)]],\n",
-    "    label='Sample',\n",
+    "    label='Opt. design for sample',\n",
     "    #alpha=0.8,\n",
     "    lw=0,\n",
     "    s=20,\n",
     "    zorder=10\n",
     ")\n",
     "\n",
-    "ax.scatter(\n",
-    "    x=mean_rest_wind_cap/1e6,\n",
-    "    y=mean_rest_storage_cap/1e6,\n",
-    "    c='black',\n",
-    "    label='Mean',\n",
-    "    lw=0,\n",
-    "    s=20,\n",
-    "    zorder=20\n",
-    ")\n",
-    "\n",
     "xlims = ax.get_xlim()\n",
     "ylims = ax.get_ylim()\n",
     "\n",
     "ax.hlines(\n",
-    "    mean_rest_storage_cap/1e6,\n",
+    "    initial_design_storage/1e6,\n",
     "    xlims[0],\n",
-    "    mean_rest_wind_cap/1e6,\n",
+    "    initial_design_wind/1e6,\n",
     "    color='black',\n",
     "    alpha=0.5,\n",
     "    linestyle='--',\n",
     "    zorder=1\n",
     ")\n",
     "ax.vlines(\n",
-    "    mean_rest_wind_cap/1e6,\n",
+    "    initial_design_wind/1e6,\n",
     "    ylims[0],\n",
-    "    mean_rest_storage_cap/1e6,\n",
+    "    initial_design_storage/1e6,\n",
     "    color='black',\n",
     "    alpha=0.5,\n",
     "    linestyle='--',\n",
