Update and reorder cost analysis cells

--- a/analysis/analyse_case.ipynb
+++ b/analysis/analyse_case.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expt_name = 'base'"
+    "expt_name = 'two_techs'"
    ]
   },
   {
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quick bit of pre-analysis"
+    "### Quick bit of pre-analysis"
    ]
   },
   {
@@ -119,21 +119,132 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load cost data\n",
+    "carbon_cost = base_params['cost_values']['carbon_price']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare average total operating costs for different cases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "no_storage_cost = none_results['overall_objective']['overall_objective']\n",
     "prior_cost = prior_opt_results['overall_objective']['overall_objective']\n",
     "prior_techs = prior_opt_results['design']['storage_technologies']\n",
     "restricted_expected_cost = np.mean([res['overall_objective']['overall_objective'] for res in restricted_results])\n",
     "open_expected_cost = np.mean([res['overall_objective']['overall_objective'] for res in open_results])\n",
     "\n",
-    "for i, techs in enumerate(tech_combos_strs):\n",
-    "    print(f'Prior cost, {techs}: {prior_results[i][\"overall_objective\"][\"overall_objective\"]/1e6:.2f} €m/yr')\n",
-    "print('')\n",
-    "\n",
     "print(f'No storage cost: {no_storage_cost/1e6:.2f} €m/yr')\n",
     "print(f'Prior cost: {prior_cost/1e6:.2f} €m/yr, {prior_techs}')\n",
     "print(f'Restricted expected cost: {restricted_expected_cost/1e6:.2f} €m/yr')\n",
     "print(f'Open expected cost: {open_expected_cost/1e6:.2f} €m/yr')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compute costs differences for design cases (VoI & VoO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute cost differences\n",
+    "print(f'Storage benefit: {(no_storage_cost - prior_cost)/1e6:.2f} €m/yr ({(no_storage_cost - prior_cost)/no_storage_cost*100:.1f}%)')\n",
+    "print(f'VoI: {(prior_cost - restricted_expected_cost)/1e6:.2f} €m/yr ({(prior_cost - restricted_expected_cost)/prior_cost*100:.1f}%)')\n",
+    "print(f'VoO: {(restricted_expected_cost - open_expected_cost)/1e6:.2f} €m/yr ({(restricted_expected_cost - open_expected_cost)/restricted_expected_cost*100:.1f}%)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compute carbon emissions for different cases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute associated carbon savings\n",
+    "no_storage_carbon = none_results['overall_objective']['overall_carbon_cost']\n",
+    "prior_carbon = prior_opt_results['overall_objective']['overall_carbon_cost']\n",
+    "restricted_expected_carbon = np.mean([res['overall_objective']['overall_carbon_cost'] for res in restricted_results])\n",
+    "open_expected_carbon = np.mean([res['overall_objective']['overall_carbon_cost'] for res in open_results])\n",
+    "\n",
+    "print(f'No storage carbon cost: {no_storage_carbon/1e6:.1f} ktCO2/yr')\n",
+    "print(f'Prior design carbon cost: {prior_carbon/1e6:.1f} ktCO2/yr')\n",
+    "print(f'Restricted expected carbon cost: {restricted_expected_carbon/1e6:.1f} ktCO2/yr')\n",
+    "print(f'Open expected carbon cost: {open_expected_carbon/1e6:.1f} ktCO2/yr')\n",
+    "print('')\n",
+    "print(f'Storage carbon benefit: {(no_storage_carbon - prior_carbon)/(carbon_cost*1e6):.1f} ktCO2/yr')\n",
+    "print(f'Unc. red. carbon benefit: {(prior_carbon - restricted_expected_carbon)/(carbon_cost*1e6):.1f} ktCO2/yr')\n",
+    "print(f'Optionality carbon benefit: {(restricted_expected_carbon - open_expected_carbon)/(carbon_cost*1e6):.1f} ktCO2/yr')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare average cost spent on storage for different cases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prior_storage_cost = prior_opt_results['overall_objective']['overall_storage_cost']\n",
+    "restricted_storage_cost = np.mean([res['overall_objective']['overall_storage_cost'] for res in restricted_results])\n",
+    "open_storage_cost = np.mean([res['overall_objective']['overall_storage_cost'] for res in open_results])\n",
+    "\n",
+    "print(f'Prior storage cost: {prior_storage_cost/1e6:.1f} €m/yr')\n",
+    "print(f'Restricted storage cost: {restricted_storage_cost/1e6:.1f} €m/yr')\n",
+    "print(f'Open storage cost: {open_storage_cost/1e6:.1f} €m/yr')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare performance (stats) of prior system designs using different storage technologies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Prior design stats: total cost, CO2 emissions, storage capacity, storage cost')\n",
+    "for i, techs in enumerate(tech_combos_strs):\n",
+    "    cost = prior_results[i][\"overall_objective\"][\"overall_objective\"]/1e6\n",
+    "    co2 = prior_results[i]['overall_objective']['overall_carbon_cost']/(carbon_cost*1e6)\n",
+    "    storage_cap = np.sum([prior_results[i]['design']['storage_capacities'][tech]['value'] for tech in prior_results[i]['design']['storage_technologies']])/1e6\n",
+    "    storage_cost = prior_results[i]['overall_objective']['overall_storage_cost']/1e6\n",
+    "\n",
+    "    print(f'{techs}: {cost:.1f} €m/yr, {co2:.1f} ktCO2/yr, {storage_cap:.2f} GWh, {storage_cost:.1f} €m/yr')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look at average sizings for restricted designs"
    ]
   },
   {
@@ -150,37 +261,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Compute cost differences\n",
-    "print(f'Storage benefit: {(no_storage_cost - prior_cost)/1e6:.2f} €m/yr ({(no_storage_cost - prior_cost)/no_storage_cost*100:.1f}%)')\n",
-    "storage_cost = prior_opt_results['overall_objective']['overall_storage_cost']\n",
-    "print(f'Storage cost: {storage_cost/1e6:.2f} €m/yr')\n",
-    "print('')\n",
-    "print(f'VoI: {(prior_cost - restricted_expected_cost)/1e6:.2f} €m/yr ({(prior_cost - restricted_expected_cost)/prior_cost*100:.1f}%)')\n",
-    "print(f'VoO: {(restricted_expected_cost - open_expected_cost)/1e6:.2f} €m/yr ({(restricted_expected_cost - open_expected_cost)/restricted_expected_cost*100:.1f}%)')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Compute associated carbon savings\n",
-    "carbon_cost = base_params['cost_values']['carbon_price']\n",
-    "no_storage_carbon = none_results['overall_objective']['overall_carbon_cost']\n",
-    "prior_carbon = prior_opt_results['overall_objective']['overall_carbon_cost']\n",
-    "restricted_expected_carbon = np.mean([res['overall_objective']['overall_carbon_cost'] for res in restricted_results])\n",
-    "open_expected_carbon = np.mean([res['overall_objective']['overall_carbon_cost'] for res in open_results])\n",
-    "\n",
-    "print(f'No storage carbon cost: {no_storage_carbon/1e3:.0f} tCO2/yr')\n",
-    "print(f'Storage carbon benefit: {(no_storage_carbon - prior_carbon)/(carbon_cost*1e3):.0f} tCO2/yr')\n",
-    "print(f'Unc. red. carbon benefit: {(prior_carbon - restricted_expected_carbon)/(carbon_cost*1e3):.0f} tCO2/yr')\n",
-    "print(f'Optionality carbon benefit: {(restricted_expected_carbon - open_expected_carbon)/(carbon_cost*1e3):.0f} tCO2/yr')"
+    "Look at final design technology choices"
    ]
   },
   {
@@ -199,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plot cost distributions"
+    "### Plot cost distributions"
    ]
   },
   {
@@ -260,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plot designs"
+    "### Plot designs"
    ]
   },
   {
@@ -427,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plot improvement in cost from open design c.f. restricted"
+    "### Plot improvement in cost from open design c.f. restricted"
    ]
   },
   {
