Improve figure legends

--- a/analysis/analyse_case.ipynb
+++ b/analysis/analyse_case.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expt_name = 'two_techs'"
+    "expt_name = 'base'"
    ]
   },
   {
@@ -324,8 +324,18 @@
     "plt.yticks([])\n",
     "plt.xlabel('Posterior expected cost (€m/yr)')\n",
     "\n",
-    "plt.hlines(0,0,1,color='black',linestyles=['--'],label='Pre-post.')\n",
-    "plt.legend(loc='upper left')\n",
+    "legend1 = plt.legend(loc='upper left',title='Storage technology')\n",
+    "\n",
+    "hline = plt.hlines(0,0,1,color='black',alpha=0.5,linestyles=['--'],label='Pre-post. cost\\n(mean of dist.)')\n",
+    "plt.legend(\n",
+    "    handles=[hline],\n",
+    "    loc=(0.015,0.585),\n",
+    "    #loc='center left',\n",
+    "    fontsize=10,\n",
+    "    title_fontsize=10\n",
+    ")\n",
+    "plt.gca().add_artist(legend1)\n",
+    "\n",
     "plt.tight_layout()\n",
     "plt.savefig(os.path.join('plots',f'{expt_name}_post_cost_dists.pdf'))\n",
     "plt.show()"
@@ -478,7 +488,7 @@
     "    c=[colors[tech_combos_strs.index(restricted_techs_str)]],\n",
     "    alpha=0.5,\n",
     "    lw=0,\n",
-    "    label='Restricted',\n",
+    "    #label='Restricted',\n",
     "    marker='s',\n",
     "    s=15\n",
     ")\n",
@@ -498,9 +508,26 @@
     "plt.xlabel('Wind Capacity (GW)')\n",
     "plt.ylabel('Storage Capacity (GWh)')\n",
     "\n",
-    "lgnd = plt.legend()\n",
-    "for i in range(len(tech_combos)+1):\n",
+    "lgnd = plt.legend(title='Selected technology', loc='upper left')\n",
+    "for i in range(len(tech_combos)):\n",
     "    lgnd.legend_handles[i]._sizes = [40]\n",
+    "\n",
+    "dot = ax.scatter(\n",
+    "    x=[0],\n",
+    "    y=[0],\n",
+    "    c=[colors[tech_combos_strs.index(restricted_techs_str)]],\n",
+    "    alpha=0.5,\n",
+    "    lw=0,\n",
+    "    label='Design without\\noptionality',\n",
+    "    marker='s',\n",
+    "    s=15)\n",
+    "lgnd2 = plt.legend(\n",
+    "    handles=[dot],\n",
+    "    loc=(0.015,0.585)\n",
+    "    )\n",
+    "lgnd2.legendHandles[0]._sizes = [40]\n",
+    "\n",
+    "plt.gca().add_artist(lgnd)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig(os.path.join('plots',f'{expt_name}_post_designs.pdf'))\n",
@@ -572,7 +599,7 @@
     "ax.plot(\n",
     "    np.arange(1,N+1),\n",
     "    voi_estimates/1e6,\n",
-    "    label='VoO estimate',\n",
+    "    label='Mean estimate',\n",
     "    color='black',\n",
     "    lw=2.5,\n",
     "    zorder=1\n",
@@ -581,15 +608,21 @@
     "    np.arange(1,N+1),\n",
     "    (voi_estimates - 2*voi_std_errors)/1e6,\n",
     "    (voi_estimates + 2*voi_std_errors)/1e6,\n",
-    "    label='95% CI',\n",
+    "    label='95% conf. int.',\n",
     "    color='black',\n",
     "    lw=0,\n",
     "    alpha=0.2,\n",
     "    zorder=0\n",
     ")\n",
     "\n",
+    "legend1 = plt.legend(\n",
+    "    loc='upper center',\n",
+    "    title='Value of Optionality'\n",
+    "    )\n",
+    "\n",
+    "handles = []\n",
     "for techs_str in tech_combos_strs:\n",
-    "    ax.scatter(\n",
+    "    h = ax.scatter(\n",
     "        x=np.arange(1,N+1)[open_techs == techs_str],\n",
     "        y=cost_improvements[open_techs == techs_str]/1e6,\n",
     "        c = colors[tech_combos_strs.index(techs_str)],\n",
@@ -597,6 +630,7 @@
     "        clip_on=False,\n",
     "        zorder=100\n",
     "    )\n",
+    "    handles.append(h)\n",
     "\n",
     "plt.xlim(0,N+1)\n",
     "plt.ylim(0)\n",
@@ -604,7 +638,13 @@
     "plt.xlabel('Sample no.')\n",
     "plt.ylabel('Cost Improvement (€m/yr)')\n",
     "\n",
-    "plt.legend()\n",
+    "plt.legend(\n",
+    "    handles=handles,\n",
+    "    title='Selected technology',\n",
+    "    loc='upper right'\n",
+    ")\n",
+    "plt.gca().add_artist(legend1)\n",
+    "\n",
     "plt.tight_layout()\n",
     "plt.savefig(os.path.join('plots',f'{expt_name}_designs_comparison.pdf'))\n",
     "plt.show()"
@@ -705,7 +745,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "EP-VOI",
+   "display_name": "EPvoi",
    "language": "python",
    "name": "python3"
   },
